...
  "iAmA": "I am a...",
  "joinMedLinkSubtitle": "Join MedLink and take control of your health",
  "joinMedLinkTitle": "Join MedLink for better healthcare",
  "logOutSecurely": "Log Out Securely",
  "loginBtnText": "Login",
  "loginHere": "Login Here",
  "logoutBtn": "Logout",
  "passwordMinLength": "Min. 8 characters",
  "registerAccount": "Register Account",
  "registerHere": "Register Here",
  "sendCode": "Send Code",
  "sendResetCode": "Send Reset Code",
  "signInToContinue": "Sign in to continue",
...
